# thw_backend

./: .env  build.sh  pyproject.toml  requirements.txt
task_tracker/: db.sqlite3
task_tracker/task_tracker/: asgi.py  settings.py  wsgi.py
task_tracker/tasks/: admin.py  models.py  serializers.py  urls.py  views.py
task_tracker/tasks/migrations/: 0001_initial.py
